--- a/src/index.css
+++ b/src/index.css
@@ -4,17 +4,21 @@ body {
   font-family: sans-serif;
 }
 
+.wrapper {
+  border: black;
+  background-color: black;
+}
+
 main {
   width: 85vw;
-  min-height: 80vh;
-  max-width: 1024px;
+  max-width: 65%;
   margin: 35px auto;
-  background: #fff;
+  background-image: url(./imgs/background.jpg);
   padding: 15px;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
-.grid-view {
+/* .grid-view {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -26,7 +30,7 @@ main {
 
 .grid-view div.card.ui {
   margin: 1.25rem;
-}
+} */
 /*
 .main-img {
   display: block;
@@ -36,4 +40,5 @@ main {
 
 header h1 {
   text-align: center;
+  color: crimson;
 }
